--- a/src/main/resources/com/example/casinoroyaleblackjackgui/black-jack-start.fxml
+++ b/src/main/resources/com/example/casinoroyaleblackjackgui/black-jack-start.fxml
@@ -2,12 +2,11 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <VBox fx:id="verticalBox" alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.casinoroyaleblackjackgui.BlackJackController">
@@ -20,18 +19,24 @@
     <ImageView id="bg" fitHeight="687.0" fitWidth="1200.0">
         <Image url="@/img/bg.jpg" />
     </ImageView>
-
-        <Text id="main-title" layoutX="523.0" layoutY="205.0">Welcome to Casino Royale.</Text>
         <ImageView id="logo" fitHeight="150.0" fitWidth="150.0">
             <Image url="@/img/Casino-Royale_rund.png" />
         </ImageView>
-        <Text id="subtitle" layoutX="546.0" layoutY="261.0">lets play Blackjack.</Text>
 
-        <Text layoutX="560.0" layoutY="320.0" text="Spieleranzahl" />
-        <TextField id="player_input" fx:id="playerInput" layoutX="525.0" layoutY="340.0" />
+        <Text layoutX="556.0" layoutY="373.0" text="Spieleranzahl" />
 
-        <Label fx:id="welcomeText" />
-      <Button id="btn" layoutX="562.0" layoutY="498.0" mnemonicParsing="false" onAction="#switchToScene2" text="Start Game" />
+      <Button layoutX="512.0" layoutY="400.0" mnemonicParsing="false" onAction="#switchToScene2" text="1 Spieler" />
+      <Button layoutX="609.0" layoutY="400.0" mnemonicParsing="false" onAction="#switchToScene2" text="2 Spieler" />
+      <Text id="main-title" layoutX="356.0" layoutY="281.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome to Casino Royale">
+         <font>
+            <Font size="40.0" />
+         </font>
+      </Text>
+      <Text layoutX="513.0" layoutY="327.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Let's play BlackJack!" textAlignment="CENTER">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Text>
 
     </AnchorPane>
 
