--- a/src/main/resources/com/example/casinoroyaleblackjackgui/black-jack-3.fxml
+++ b/src/main/resources/com/example/casinoroyaleblackjackgui/black-jack-3.fxml
@@ -38,12 +38,22 @@
             <Font size="20.0" />
          </font>
       </Text>
-      <Text fx:id="currentP11" fill="WHITE" layoutX="260.0" layoutY="609.0" strokeType="OUTSIDE" strokeWidth="0.0" text="${controller.firstPlayerBalance}">
+      <Text fx:id="startPlayer1Balance" fill="WHITE" layoutX="260.0" layoutY="609.0" strokeType="OUTSIDE" strokeWidth="0.0" text="${controller.firstPlayerBalance}">
          <font>
             <Font size="20.0" />
          </font>
       </Text>
-      <Text fx:id="currentP111" fill="WHITE" layoutX="873.0" layoutY="608.0" strokeType="OUTSIDE" strokeWidth="0.0" text="${controller.secondPlayerBalance}">
+      <Text fx:id="currentPlayer1Balance" fill="WHITE" layoutX="260.0" layoutY="609.0" strokeType="OUTSIDE" strokeWidth="0.0" text="100" visible="false">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Text>
+      <Text fx:id="startPlayer2Balance" fill="WHITE" layoutX="873.0" layoutY="608.0" strokeType="OUTSIDE" strokeWidth="0.0" text="${controller.secondPlayerBalance}">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Text>
+      <Text fx:id="currentPlayer2Balance" fill="WHITE" layoutX="873.0" layoutY="608.0" strokeType="OUTSIDE" strokeWidth="0.0" text="100" visible="false">
          <font>
             <Font size="20.0" />
          </font>
@@ -54,13 +64,13 @@
          </font>
       </Button>
       <Button fx:id="player1bet10" layoutX="136.0" layoutY="638.0" mnemonicParsing="false" onAction="#setBet10Player1" text="Bet 10" />
-      <Button fx:id="player2bet10" layoutX="781.0" layoutY="638.0" mnemonicParsing="false" onAction="#setBet10Player2"  text="Bet 10" />
-      <Button fx:id="player1bet20" layoutX="206.0" layoutY="638.0" mnemonicParsing="false" onAction="#setBet20Player1"  text="Bet 20" />
-      <Button fx:id="player2bet20" layoutX="848.0" layoutY="638.0" mnemonicParsing="false" onAction="#setBet20Player2"  text="Bet 20" />
-      <Button fx:id="player1bet30" layoutX="290.0" layoutY="638.0" mnemonicParsing="false" onAction="#setBet30Player1"  text="Bet 30" />
-      <Button fx:id="player2bet30" layoutX="932.0" layoutY="638.0" mnemonicParsing="false" onAction="#setBet30Player2"  text="Bet 30" />
-      <Button fx:id="player2Stand" layoutX="1006.0" layoutY="638.0" mnemonicParsing="false" onAction="#setStandPlayer1"  text="Stand" />
-      <Button fx:id="player1Stand" layoutX="372.0" layoutY="638.0" mnemonicParsing="false" onAction="#setStandPlayer2"  text="Stand" />
+      <Button fx:id="player2bet10" layoutX="781.0" layoutY="638.0" mnemonicParsing="false" onAction="#setBet10Player2" text="Bet 10" />
+      <Button fx:id="player1bet20" layoutX="206.0" layoutY="638.0" mnemonicParsing="false" onAction="#setBet20Player1" text="Bet 20" />
+      <Button fx:id="player2bet20" layoutX="848.0" layoutY="638.0" mnemonicParsing="false" onAction="#setBet20Player2" text="Bet 20" />
+      <Button fx:id="player1bet30" layoutX="290.0" layoutY="638.0" mnemonicParsing="false" onAction="#setBet30Player1" text="Bet 30" />
+      <Button fx:id="player2bet30" layoutX="932.0" layoutY="638.0" mnemonicParsing="false" onAction="#setBet30Player2" text="Bet 30" />
+      <Button fx:id="player1Skip" layoutX="372.0" layoutY="638.0" mnemonicParsing="false" onAction="#skipRoundPlayer1" text="Skip" />
+      <Button fx:id="player2Skip" layoutX="1006.0" layoutY="638.0" mnemonicParsing="false" onAction="#skipRoundPlayer2" text="Skip" />
       <Text fx:id="currentPlayer1Bet" fill="WHITE" layoutX="88.0" layoutY="317.0" strokeType="OUTSIDE" strokeWidth="2.0" text="Wetteinsatz" visible="false">
          <font>
             <Font name="System Bold" size="18.0" />
@@ -71,10 +81,31 @@
             <Font name="System Bold" size="18.0" />
          </font>
       </Text>
-      <Button fx:id="player1Stand1" layoutX="84.0" layoutY="545.0" mnemonicParsing="false" text="Stand" />
-      <Button fx:id="player1Stand11" layoutX="1075.0" layoutY="545.0" mnemonicParsing="false" text="Stand" />
-      <Button fx:id="player1Stand111" layoutX="1075.0" layoutY="502.0" mnemonicParsing="false" text="Hit" />
-      <Button fx:id="player1Stand12" layoutX="84.0" layoutY="502.0" mnemonicParsing="false" text="Hit" />
+      <Button fx:id="player1Stand" layoutX="84.0" layoutY="545.0" mnemonicParsing="false" text="Stand" visible="false" />
+      <Button fx:id="player2Stand" layoutX="1075.0" layoutY="545.0" mnemonicParsing="false" text="Stand" visible="false" />
+        <Button fx:id="player1Hit" layoutX="84.0" layoutY="502.0" mnemonicParsing="false" text="Hit" visible="false" />
+        <Button fx:id="player2Hit" layoutX="1075.0" layoutY="502.0" mnemonicParsing="false" text="Hit" visible="false" />
+      <ImageView fx:id="player1Card1" fitHeight="108.9" fitWidth="75.0" layoutX="194.0" layoutY="382.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="player1Card2" fitHeight="108.9" fitWidth="75.0" layoutX="223.0" layoutY="382.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="player1Card3" fitHeight="108.9" fitWidth="75.0" layoutX="239.0" layoutY="382.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="player1Card4" fitHeight="108.9" fitWidth="75.0" layoutX="278.0" layoutY="382.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="player1Card5" fitHeight="108.9" fitWidth="75.0" layoutX="288.0" layoutY="382.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="player1Card6" fitHeight="108.9" fitWidth="75.0" layoutX="326.0" layoutY="382.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="player2Card1" fitHeight="108.9" fitWidth="75.0" layoutX="802.0" layoutY="382.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="player2Card2" fitHeight="108.9" fitWidth="75.0" layoutX="831.0" layoutY="382.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="player2Card3" fitHeight="108.9" fitWidth="75.0" layoutX="847.0" layoutY="382.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="player2Card4" fitHeight="108.9" fitWidth="75.0" layoutX="886.0" layoutY="382.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="player2Card5" fitHeight="108.9" fitWidth="75.0" layoutX="896.0" layoutY="382.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="player2Card6" fitHeight="108.9" fitWidth="75.0" layoutX="934.0" layoutY="382.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="dealerCard1" fitHeight="108.9" fitWidth="75.0" layoutX="500.0" layoutY="81.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="dealerCard2" fitHeight="108.9" fitWidth="75.0" layoutX="529.0" layoutY="81.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="dealerCard3" fitHeight="108.9" fitWidth="75.0" layoutX="545.0" layoutY="81.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="dealerCard4" fitHeight="108.9" fitWidth="75.0" layoutX="584.0" layoutY="81.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="dealerCard5" fitHeight="108.9" fitWidth="75.0" layoutX="594.0" layoutY="81.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="dealerCard6" fitHeight="108.9" fitWidth="75.0" layoutX="632.0" layoutY="81.0" pickOnBounds="true" preserveRatio="true" />
+      <Text fx:id="player1CardSum" layoutX="287.0" layoutY="532.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+      <Text fx:id="player2CardSum" layoutX="900.0" layoutY="532.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+      <Text fx:id="dealerCardSum" layoutX="593.0" layoutY="231.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
 
     </AnchorPane>
 
