--- a/src/main/resources/styles/style.css
+++ b/src/main/resources/styles/style.css
@@ -11,7 +11,7 @@
     -fx-background-repeat: no-repeat;
     -fx-alignment: center;
     -fx-translate-x: 525;
-    -fx-translate-y: 15;
+    -fx-translate-y: 50;
 }
 
 #main-title {
@@ -23,7 +23,7 @@
     -fx-font-size: 25px;
     -fx-font-weight: bold;
 }
-#btn{
+#btn, .btn{
     -fx-background-color: #ffffff;
     -fx-cursor: hand;
     -fx-padding: 1px;
